stylesheet.less
@import "@{templateCommon}/basekit-bootstrap.less";

body {
  background-color: @color-swatch1;
  margin: 0;
  padding: 0;
}

.wrapper {
    width: 90%;
    margin: 0 5%;
}

a {
  font-family:@font-swatch2-font-family;
  font-size:@font-swatch5-font-size;
  font-weight:@font-swatch5-font-weight;
  color:@color-swatch3;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

h1, h2, h3, h4, h5, p {
  margin: 0;
  padding: 0 0 10px;
}

h1 {
  font-family:@font-swatch1-font-family;
  font-weight: @font-swatch1-font-weight;
  color:@font-swatch1-color;
  line-height:@font-swatch1-line-height;
  letter-spacing: @font-swatch1-letter-spacing;
  font-size: @font-swatch1-font-size;
}

h2
{
  font-family:@font-swatch2-font-family;
  font-size: @font-swatch2-font-size;
  font-weight: @font-swatch2-font-weight;
  line-height:@font-swatch2-line-height;
  color: @font-swatch2-color;
  letter-spacing: @font-swatch2-letter-spacing;
  a {
    font-size: @font-swatch2-font-size;
  }
}

h3
{
  font-family:@font-swatch3-font-family;
  font-size:@font-swatch3-font-size;
  font-weight: @font-swatch3-font-weight;
  color: @font-swatch3-color;
  line-height:@font-swatch3-line-height;
  letter-spacing: @font-swatch3-letter-spacing;
}

h4
{
  font-family:@font-swatch4-font-family;
  font-size:@font-swatch4-font-size;
  font-weight:@font-swatch4-font-weight;
  line-height:@font-swatch4-line-height;
  color:@font-swatch4-color;
  letter-spacing: @font-swatch4-letter-spacing;
}

p
{
  font-family:@font-swatch5-font-family;
  font-size:@font-swatch5-font-size;
  font-weight: @font-swatch5-font-weight;
  line-height:@font-swatch5-line-height;
  color:@font-swatch5-color;
  letter-spacing: @font-swatch5-letter-spacing;
}

ul, ol, li {
  font-family:@font-swatch5-font-family;
  font-size:@font-swatch5-font-size;
  font-weight: @font-swatch5-font-weight;
  line-height:@font-swatch5-line-height;
  color:@font-swatch5-color;
  letter-spacing: @font-swatch5-letter-spacing;
}

blockquote {
  background: lighten(@color-swatch5,20%);
  margin:0;
  padding: 20px;
  quotes:"\201C""\201D""\2018""\2019";
  font-family:@font-swatch5-font-family;
  font-size:@font-swatch5-font-size;
  font-weight:@font-swatch5-font-weight;
  line-height:@font-swatch5-line-height;
  color:@font-swatch5-color;
  border-radius: 3px;
}

blockquote:before {
  font-family: georgia;
  color: @font-swatch5-color;
  content:open-quote;
  font-size:4em;
  line-height:.1em;
  margin-right:.1em;
  vertical-align:-.4em;
  top: 24px;
  left: 2px;
}

/* ===============================
   BLOG
   =============================== */

.blog-post-feature-image-wrap {
	line-height: 0;
	background-size: cover;
	background-position: center;
	border: 1px solid @color-swatch2;
	width: 100%;
	height: 250px;
	margin-bottom: 10px;
	img {
		display: none;
	}
}

.blog-post-item {
	padding-bottom: 20px;
}

input[type="search"]::-webkit-search-decoration {
	display: none;
}

.blog-search-form {
	label {
		display: block;
	}
}

/* ===============================
   MENU
   =============================== */

.menu-item-image-wrap {
	width: 100%;
	height: 200px;
	border: 1px solid @color-swatch2;
	background-size: cover;
	background-position: center;
	img {
		display: none;
	}
}

.menu .menu-items li.menu-item-promoted {
	padding: 8px 14px;
	background: fadeout(@color-swatch2, 90%);
}

.menu-item-nutritional-title {
	color: darken(@color-swatch2, 25%);	
}
.dietary-icon {
	color: darken(@color-swatch2, 25%);
	text-decoration: underline;
}

.menu-subsection {
	background: fadeout(@color-swatch2, 90%);
}


/* ===============================
   CUSTOM CSS
   =============================== */

.main {
  padding: 40px 0;
}

body.edit .widget.navigation, body.edit .widget.extendednavigation {
    overflow: visible;
}

/* DEAFULT PAGE TYPES */

.bk-pt-default .bk-header {
  border-bottom: 1px solid lighten(@color-swatch5,15%);
}

.bk-pt-default .extendednavigation ul li:hover > ul {
  border: 1px solid lighten(@color-swatch5,22%);
  padding: 0;
}

.bk-pt-default .main {
  padding: 40px 0;
}

/* ===============================
   HEADER
   =============================== */

.bk-header {
  padding: 0;
  background-color: @color-swatch7;
}

.companyheader {
  display: block;
  float: left;
  padding: 20px 0px 18px;
}

/* COMPANY NAME */

.widget.companyname {
  display: block;
  float: left;
  margin-top: 8px;
}

.widget.companyname a {
  font-family:@font-swatch10-font-family;
  font-weight: @font-swatch1-font-weight;
  color:@font-swatch10-color;
  line-height:@font-swatch10-line-height;
  letter-spacing: @font-swatch10-letter-spacing;
  font-size: @font-swatch10-font-size;
}

.widget.companyname a:hover {
  cursor: pointer;
  text-decoration: none;
}

/* LOGO */

.widget.logo {
  display: block;
  float: left;
  margin-right: 10px;
}

/* ===============================
   FOOTER
   =============================== */

.bk-footer {
  padding: 4em 0;
  background-color: lighten(@color-swatch4,2%);
  min-height: 150px;
  color: @color-swatch1;
}

.bk-footer h1, .bk-footer h2, footer h3, .bk-footer h4 {
  color: @color-swatch1;
  padding-bottom: 20px;
}

.bk-footer p {
  font-family: @font-swatch5-font-family;
  color: lighten(@color-swatch5,10%);
  line-height:@font-swatch5-line-height;
  padding-bottom: 20px;
}

.bk-footer span {
  color: @color-swatch1;
}

/* ===============================
   EXTENDED NAVIGATION
   =============================== */

.widget.extendednavigation {
  float: right;
  position: relative;
  max-width: 700px;
  margin: 20px 0;
}

.widget.extendednavigation a.pull {
  top:-58px;
}

.widget.extendednavigation ul {
  float: left;
  margin: 0;
  padding: 0;
}

.widget.extendednavigation ul li {
  float: left;
  display: block;
  text-align: left!important;
  border: none;
}
/* ... */

